--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,7 @@ pipelines:
         script:
           - cd ..
           - hg clone https://bitbucket.org/dimo414/profilegem
-          - mv $DRONE_BUILD_DIR profilegem
+          - mv $BITBUCKET_CLONE_DIR profilegem
           - cd profilegem
-          - echo "#GEM $(basename $DRONE_BUILD_DIR | sed 's/.gem//')" > local.conf.sh
+          - echo "#GEM $(basename $BITBUCKET_CLONE_DIR | sed 's/.gem//')" > local.conf.sh
           - ./load.sh
