--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,9 @@ pipelines:
   default:
     - step:
         script:
+          - pwd
+          - echo $BITBUCKET_CLONE_DIR
+          - ls
           - cd ..
           - hg clone https://bitbucket.org/dimo414/profilegem
           - mv $BITBUCKET_CLONE_DIR profilegem
