Verify web edit triggers a pipeline.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,4 +4,5 @@ pipelines:
   default:
     - step:
         script:
+          - echo Hello World
           - /pgem_test/gem_test.sh https://bitbucket.org/dimo414/util.gem .
