Add unit tests for prompt.gem

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,5 +4,5 @@ pipelines:
   default:
     - step:
         script:
-          - echo Hello World
+          - bats test
           - /pgem_test/gem_test.sh https://bitbucket.org/dimo414/util.gem .
