Enable gem_test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Unit Tests
       run: bats test
-    # TODO fix gem_test.sh to support Git repos
-    #- name: Gem Tests
-    #  run: /pgem_test/gem_test.sh https://github.com/dimo414/util.gem .
+    - name: Gem Tests
+      run: /pgem_test/gem_test.sh https://github.com/dimo414/util.gem .
 
 # TODO shellcheck job
